Refactored SwitchingBooleanSupplier into SwitchingSupplier